crates/keron-lang/tests/corpus/errors/parse/reconcile_chain_missing_head.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found '>' expected something else, '#', '-', '"', '"true"', '"false"', int, '[', '{', '"if"', '"for"', '"match"', identifier, or '('
  --> 2:12
  |
2 | reconcile -> a
  |            ^
